# sistema_de_controle_estufas

./: .gitignore  CMakeLists.txt  README.md  diagram.json  numeros.h  projeto_estufas.c  projeto_estufas.h  refrigerador.c  refrigerador.h  wokwi.toml
inc/: diagram.json  font.h  numeros.h  ssd1306.c
